@@ -33,6 +33,7 @@ export(preprocessIntervals)
 export(processMultipleSamples)
 export(readCoverageFile)
 export(readCurationFile)
+export(readLogRatioFile)
 export(runAbsoluteCN)
 export(segmentationCBS)
 export(segmentationHclust)
