@@ -20,6 +20,8 @@ option_list <- list(
         help = "Input: NormalDB.rds file. Generated by NormalDB.R."),
     make_option(c("--segfile"), action = "store", type = "character",
                 default = NULL, help = "Input: Segmentation file"),
+    make_option(c("--logratiofile"), action = "store", type = "character",
+                default = NULL, help = "Input: Log2 copy number ratio file"),
     make_option(c("--sex"), action = "store", type = "character",
         default = formals(PureCN::runAbsoluteCN)$sex[[2]],
         help = "Input: Sex of sample. ? (detect), diplod (non-diploid chromosomes removed), F or M [default %default]"),
@@ -136,6 +138,7 @@ if (!is.null(snp.blacklist)) {
 }
 
 seg.file <- opt$segfile
+log.ratio <- opt$logratiofile
 normalDB <- opt$normaldb
 sampleid <- opt$sampleid
 out <- opt[["out"]]
@@ -180,7 +183,6 @@ if (file.exists(file.rds) && !opt$force) {
     ret <- readCurationFile(file.rds)
     if (is.null(sampleid)) sampleid <- ret$input$sampleid
 } else {
-    tumor.coverage.file.orig <- tumor.coverage.file
     if (!is.null(normalDB)) {
         #if (!is.null(seg.file)) stop("normalDB and segfile do not work together.")
         normalDB <- readRDS(normalDB)
@@ -195,7 +197,8 @@ if (file.exists(file.rds) && !opt$force) {
                 normal.coverage.file <- calculateTangentNormal(tumor.coverage.file,
                     normalDB)
             }
-        } else if (is.null(normal.coverage.file) && is.null(seg.file)) {
+        } else if (is.null(normal.coverage.file) && is.null(seg.file) &&
+                   is.null(log.ratio)) {
             stop("Need either normalDB or normal.coverage.file")
         }
         normal.coverage.file
@@ -234,11 +237,20 @@ if (file.exists(file.rds) && !opt$force) {
         BPPARAM <- bpparam()
         flog.info("Using default BiocParallel backend. You can change the default in your ~/.Rprofile file.") 
     }
+    if (!is.null(log.ratio)) {
+        flog.info("Reading %s...", log.ratio)
+        log.ratio <- readLogRatioFile(log.ratio)
+        flog.info("Reading %s...", tumor.coverage.file)
+        tumor.coverage.file <- readCoverageFile(tumor.coverage.file)
+        tumor.coverage.file <- subsetByOverlaps(tumor.coverage.file, log.ratio)
+        log.ratio <- log.ratio$log.ratio
+    }    
     ret <- runAbsoluteCN(normal.coverage.file = normal.coverage.file,
             tumor.coverage.file = tumor.coverage.file, vcf.file = opt$vcf,
             sampleid = sampleid, plot.cnv = TRUE,
             interval.file = opt$intervals,
             genome = opt$genome, seg.file = seg.file,
+            log.ratio = log.ratio,
             test.purity = test.purity,
             test.num.copy = seq(0, opt$maxcopynumber),
             sex = opt$sex,
