@@ -1,0 +1,34 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/readLogRatioFile.R
+\name{readLogRatioFile}
+\alias{readLogRatioFile}
+\title{Read file containing interval-level log2 tumor/normal ratios}
+\usage{
+readLogRatioFile(file, format, zero = NULL)
+}
+\arguments{
+\item{file}{Log2 coverage file.}
+
+\item{format}{File format. If missing, derived from the file 
+extension. Currently GATK4 DenoiseReadCounts format supported.}
+
+\item{zero}{Start position is 0-based. Default is \code{FALSE}
+for GATK, \code{TRUE} for BED file based intervals.}
+}
+\value{
+A \code{GRange} with the log2 ratio.
+}
+\description{
+Read log2 ratio file produced by external tools like The Genome Analysis 
+Toolkit version 4.
+}
+\examples{
+
+tumor.coverage.file <- system.file("extdata", "example_tumor.txt", 
+    package="PureCN")
+coverage <- readCoverageFile(tumor.coverage.file)
+
+}
+\author{
+Markus Riester
+}
