@@ -5,6 +5,8 @@ NEW FEATURES
 
     o flag segments in poor quality regions
     o Dx.R now reports chromosomal instability scores
+    o Added readLogRatioFile function to read GATK4 DenoiseReadCounts
+      output files containing log2 tumor/normal ratios
 
 BUGFIXES
 
